# lingque

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN-session-memory.md  README.md  README_CN.md  nohup.out  pyproject.toml  run_appworld.py  run_appworld_v2.py  run_appworld_v3.py  run_appworld_v4.py  run_appworld_v5.py  test_say.py
DOCS/: self-improvement-xinzhiyuan.md
appworld_results/: results_20260221_134043.json  results_20260221_141717.json  run_20230518_120000.json  run_20260221_105101.json  run_20260221_112002.json  run_20260221_112251.json  run_20260221_121212.json
docs/: NATURAL_LANGUAGE_RL_SPEC.md  PLATFORM_ABSTRACTION.md  RL_FRAMEWORK_RELEASE.md  TENGEN_AI_BP.md  VC_PITCH.md  VC_TENGEN_AI.md  angle-code-execution.md  angle-collision-protocol.md  angle-ecosystem.md  angle-feishu-bus.md  angle-group-decision.md  angle-midnight-soul.md  angle-neighbor-awareness.md  angle-performing-work.md  angle-personality-jailbreak.md  angle-self-tool-creation.md  angle-token-memory.md  blog-tech-architecture.md  curiosity-evolution-article-v2.md  curiosity-evolution-article.md  self-improvement-xiaohongshu.md  self-improvement-zhihu.md  wechat-article.md  wechat-code-execution.md  wechat-collision-protocol.md  wechat-emergent-roles.md  wechat-feishu-bus.md  wechat-token-memory.md  xiaohongshu-code-execution.md  xiaohongshu-collision.md  xiaohongshu-emergent-roles.md  xiaohongshu-note.md  xiaohongshu-token-memory.md  xiaohongshu-zero-infra.md
tests/: harness.py  run_all.py  test_infrastructure.py  test_level1_basic.py  test_level2_reasoning.py  test_platform.py  (+3 more)
(+85 files in other folders)
