[project]
name = "lingque"
version = "0.9.0"
description = "灵雀 — 深度集成飞书的个人 AI 助理框架"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "lark-oapi>=1.4",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx[socks]>=0.27",
    "pypinyin>=0.55.0",
]

[project.scripts]
lq = "lq.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lq"]
